--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "José Coelho",
-  "name": "José Coelho | DevOps Engineer | Madeira Island, Portugal",
+  "short_name": "Abhinav Chamallamudi",
+  "name": "Abhinav Chamallamudi | DevOps Engineer | Texas, United States",
   "icons": [
     {
       "src": "images/favicon/android-chrome-192x192.png",
